--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,14 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    /* Alias Para Las Rutas */
+    /* START */
+    "paths": {
+      "@image/*": [
+        "src/assets/images/*"
+      ]
+    },
+    /* END */
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
