--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve --o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run LodoaTomasPorfilio:serve-ssr",
+    "serve:ssr": "node dist/LodoaTomasPorfilio/server/main.js",
+    "build:ssr": "ng build && ng run LodoaTomasPorfilio:server",
+    "prerender": "ng run LodoaTomasPorfilio:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,8 +21,11 @@
     "@angular/forms": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/platform-server": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@codersrank/skills-chart": "^0.9.21",
+    "@nguniversal/express-engine": "^12.1.3",
+    "express": "^4.15.2",
     "ngx-page-scroll": "^7.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -28,6 +35,8 @@
     "@angular-devkit/build-angular": "~12.2.7",
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.0",
+    "@nguniversal/builders": "^12.1.3",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
