--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@codersrank/skills-chart": "^0.9.21",
     "@nguniversal/express-engine": "^12.1.3",
     "express": "^4.15.2",
+    "ngx-drag-scroll": "^12.0.0-beta.2",
     "ngx-page-scroll": "^7.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
