--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lodoa-tomas-porfilio",
-  "version": "0.0.0",
+  "name": "lodola-tomas-porfilio",
+  "version": "0.9.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --o",
@@ -28,15 +28,14 @@
     "express": "^4.15.2",
     "ngx-drag-scroll": "^12.0.0-beta.2",
     "ngx-page-scroll": "^7.0.6",
-    "ngx-page-scroll-core": "^7.0.6",
+    "ngx-page-scroll-core": "6.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.7",
-    "@angular/cli": "~12.2.7",
+    "@angular-devkit/build-angular": "^12.2.13",
     "@angular/compiler-cli": "~12.2.0",
     "@nguniversal/builders": "^12.1.3",
     "@types/express": "^4.17.0",
