--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --o",
-    "build": "ng build",
+    "build": "ng build --output-hashing",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run LodoaTomasPorfilio:serve-ssr",
     "serve:ssr": "node dist/LodoaTomasPorfilio/server/main.js",
-    "build:ssr": "ng build && ng run LodoaTomasPorfilio:server",
+    "build:ssr": "ng build --output-hashing=all && ng run LodoaTomasPorfilio:server",
     "prerender": "ng run LodoaTomasPorfilio:prerender"
   },
   "private": true,
@@ -27,8 +27,8 @@
     "@nguniversal/express-engine": "^12.1.3",
     "express": "^4.15.2",
     "ngx-drag-scroll": "^12.0.0-beta.2",
-    "ngx-page-scroll": "^7.0.6",
-    "ngx-page-scroll-core": "6.0",
+    "ngx-page-scroll": "8.0.0",
+    "ngx-page-scroll-core": "8.0.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.3.3",
     "tslib": "^2.3.0",
